# kestrel-feature-wallet

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
kestrel_feature_wallet/: __init__.py  base_l2_wallet.py  component.yaml  economic_gates.py  feature.py  filecoin_keys.py  filecoin_testnet.py  filecoin_tools.py  multichain_tools.py  secure_key_storage.py  transaction_hook.py  transaction_manager.py  wallet_feature.py  x402_buyer.py
kestrel_feature_wallet/chain_adapters/: __init__.py  base.py  erc20.py  evm_adapter.py  token_registry.py
kestrel_feature_wallet/onramp/: __init__.py  stripe_onramp.py  webhook_handler.py
tests/: conftest.py  test_base_wallet.py  test_wallet_agent.py  test_wallet_chain_tools.py  test_wallet_limits.py  test_wallet_router.py  test_webhook_idempotency.py  test_x402_buyer.py
