[project]
name = "kestrel-feature-wallet"
version = "0.1.0"
description = "Multi-currency agent wallet with Stripe on-ramp for Kestrel Sovereign"
requires-python = ">=3.11,<3.14"
dependencies = [
    "kestrel-sovereign-sdk @ git+https://github.com/KestrelSovereignAI/kestrel-sovereign-sdk.git",
    # Cross-feature: security.key_storage (not in SDK)
    "kestrel-sovereign @ git+https://github.com/KestrelSovereignAI/kestrel-sovereign.git",
    # Async SQLite for wallet persistence
    "aiosqlite>=0.21.0",
    # HTTP client for Filecoin RPC
    "httpx>=0.27.0",
    # Cryptography for key management
    "cryptography>=45.0.5",
]

[project.optional-dependencies]
# EVM chain support (Ethereum, Polygon, Base, Filecoin FEVM)
evm = [
    "web3>=7.0.0",
]
# Stripe fiat on-ramp
stripe = [
    "stripe>=10.0.0",
]
# All optional deps
all = [
    "kestrel-feature-wallet[evm]",
    "kestrel-feature-wallet[stripe]",
]

[project.entry-points."kestrel_sovereign.features"]
WalletFeature = "kestrel_feature_wallet.wallet_feature:WalletFeature"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["kestrel_feature_wallet"]
