[project]
name = "kestrel-feature-wallet"
version = "0.1.2"
description = "Multi-currency agent wallet with Stripe on-ramp for Kestrel Sovereign"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "kestrel-sovereign-sdk>=0.13,<1",
    # Async SQLite for wallet persistence
    "aiosqlite>=0.21.0",
    # HTTP client for Filecoin RPC
    "httpx>=0.27.0",
    # Cryptography for key management
    "cryptography>=45.0.5",
]

[project.optional-dependencies]
# EVM chain support (Ethereum, Polygon, Base, Filecoin FEVM)
evm = [
    "web3>=7.0.0",
]
# Stripe fiat on-ramp
stripe = [
    "stripe>=10.0.0",
]
x402 = [
    "x402[httpx]>=2.9.0",
]
# All optional deps
all = [
    "kestrel-feature-wallet[evm]",
    "kestrel-feature-wallet[stripe]",
    "kestrel-feature-wallet[x402]",
    "kestrel-feature-wallet[test]",
]
test = [
    "kestrel-feature-wallet[evm,stripe,x402]",
    "fastapi>=0.115.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
    "pytest-timeout>=2.3.1",
]

[project.entry-points."kestrel_sovereign.features"]
WalletFeature = "kestrel_feature_wallet.wallet_feature:WalletFeature"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kestrel_feature_wallet"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
